src/index.css
@tailwind base;
@tailwind components;

@font-face {
  font-family: 'PlusJakartaSans';
  src: url('./assets/fonts/PlusJakartaSans-Regular.ttf'); 
}

@font-face {
  font-family: 'PlusJakartaSans';
  font-weight: 800;
  src: url('./assets/fonts/PlusJakartaSans-ExtraBold.ttf');
}

@font-face {
  font-family: 'PlusJakartaSans';
  font-weight: 600;
  src: url('./assets/fonts/PlusJakartaSans-SemiBold.ttf'); 
}

@font-face {
  font-family: 'PlusJakartaSans';
  font-weight: 500;
  src: url('./assets/fonts/PlusJakartaSans-Medium.ttf');
}

@font-face {
  font-family: 'PlusJakartaSans';
  font-weight: 700;
  src: url('./assets/fonts/PlusJakartaSans-Bold.ttf');
}

@tailwind utilities;


/* Headings */

h1 {
  @apply text-3xl leading-10 sm:text-4xl md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
}

h2 {
  @apply text-2xl md:text-3xl xl:text-5xl leading-[4rem] tracking-normal font-extrabold;
}

h3 {
  @apply text-[2.5rem] leading-[3.375rem] tracking-normal font-extrabold;
}

h4 {
  @apply text-[1.375rem] md:text-[1.625rem] lg:text-[1.75rem] lg:leading-10 tracking-normal font-extrabold;
}

h5 {
  @apply text-xl md:text-2xl md:leading-8 font-semibold;
}

h6 {
  @apply text-xl leading-[1.875rem] font-medium;
}

.subtitle-1 {
  @apply text-lg leading-7 font-bold;
}

.subtitle-2 {
  @apply text-lg leading-7 font-medium;
}

.lead-1 {
  @apply text-lg leading-8;
}

.lead-2 {
  @apply text-sm leading-6 font-medium;
}

.body-1 {
  @apply leading-[1.625rem];
}

.body-2 {
  @apply text-sm leading-[1.375rem];
}

.label-large {
  @apply text-xl leading-[1.875rem] font-semibold;
}

.label-medium {
  @apply text-sm leading-5 font-semibold;
}

.label-small {
  @apply text-xs leading-4 font-semibold;
}

.capitalised {
  @apply md:text-sm leading-[1.125rem] font-extrabold;
}

.badge-label {
  @apply text-xl leading-6;
}

button {
  @apply hover:opacity-40 transition ease-in-out duration-300; 
}


nav li {
  @apply text-link-inactive hover:text-link-active transition ease-in-out duration-300;

}

.text-desc-base {
  @apply text-sm text-desc md:text-base;
}

#services h4 {
  @apply font-medium mb-5 md:mb-10;
}

#services h4 ~ p:empty {
  @apply min-h-4;
}

#services h4 ~ p {
  @apply text-desc-base font-medium;
}

#services h4 > span {
  @apply text-primary;
}

#services h2 ~ div > div:nth-child(2) {
  @apply !flex-row-reverse;
} 

.review {
  filter: drop-shadow(0 100px 80px rgba(0,0,0,0.07))
          drop-shadow(0 41.78px 33.42px rgba(0,0,0,0.0503))
          drop-shadow(0 22.34px 17.87px rgba(0,0,0,0.0417))
          drop-shadow(0 12.52px 10.02px rgba(0,0,0,0.035))
          drop-shadow(0 6.65px 5.32px rgba(0,0,0,0.0283))
          drop-shadow(0 2.77px 2.21px rgba(0,0,0,0.0197))
    ;
  @apply font-medium text-sm lg:text-base;
}

